# gpt2-interp

./: .gitignore  flake.nix  pyproject.toml
src/gpt2-interp/: dataset.py  main.py
