[project]
name = "gpt2-interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "rich>=14.2.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformer-lens>=2.16.1",
]
